# telos

./: Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yaml
migrations/: 20250629220008_init.sql  init.sql
src/: admin.rs  db.rs  handler.rs  main.rs  miguel.rs
