[package]
name = "telos"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
regex = "1.11.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
teloxide = { version = "0.16.0", features = ["macros"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "chrono",
  "migrate",
] }
uuid = { version = "1.17.0", features = ["v7"] }
